--- a/package.json
+++ b/package.json
@@ -19,21 +19,28 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.2.0",
+    "@react-three/drei": "^10.4.2",
+    "@react-three/fiber": "^9.1.4",
     "@supabase/supabase-js": "^2.49.4",
     "@tabler/icons-react": "^3.34.0",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.485.0",
-    "motion": "^12.22.0",
+    "motion": "^12.23.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "resend": "^4.6.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.178.0",
+    "three-globe": "^2.43.0",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
